<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_detail_colis_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Colis image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_archive_grey_900_48dp" />


    <TextView
        android:id="@+id/text_id_colis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/ds"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="RC12345678912" />

    <TextView
        android:id="@+id/parcel_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/text_id_colis"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Colis de maman" />


    <TextView
        android:id="@+id/step_last_pays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/step_last_date"
        app:layout_constraintTop_toTopOf="@+id/step_last_date"
        tools:text="PAYS-BAS" />

    <TextView
        android:id="@+id/step_last_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/ds"
        app:layout_constraintTop_toBottomOf="@+id/text_id_colis"
        tools:text="08/10/2017 19:00" />


    <TextView
        android:id="@+id/step_last_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/relative_delete_layout"
        app:layout_constraintLeft_toRightOf="@+id/ds"
        app:layout_constraintTop_toBottomOf="@+id/step_last_date"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Envoyé mais pas encore reçu" />

    <RelativeLayout
        android:id="@+id/relative_delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_last_description">

        <Button
            android:id="@+id/fab_delete_colis"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:background="@color/fui_transparent"
            android:contentDescription="Delete Button"
            android:text="Supprimer"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
