<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_parcel_list_management"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="GridLayoutManager" />

    <TextView
        android:id="@+id/text_explicatif_suivi_colis"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Commencez à suivre vos colis.\n\nAppuyez sur le bouton + pour ajouter un nouveau colis au suivi.\n\nDès que la situation de vos colis évoluera une notification vous sera envoyée. (ce service nécessite une connexion internet)" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_parcel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:windowSoftInputMode="adjustResize"
        app:backgroundTint="@color/colorPrimaryDark"
        app:backgroundTintMode="src_over"
        app:rippleColor="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_white_48dp" />
</FrameLayout>